[gd_scene load_steps=14 format=2]

[ext_resource path="res://tanks/blueturret.tscn" type="PackedScene" id=1]
[ext_resource path="res://terrain/terrain_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://tanks/EnemyTank.tscn" type="PackedScene" id=3]
[ext_resource path="res://tanks/Missletank.tscn" type="PackedScene" id=4]
[ext_resource path="res://bullet/EnemyBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://bullet/Missle.tscn" type="PackedScene" id=6]
[ext_resource path="res://maps/intro.gd" type="Script" id=7]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://fonts/intro.tres" type="DynamicFont" id=9]
[ext_resource path="res://tanks/redturret.tscn" type="PackedScene" id=10]
[ext_resource path="res://tanks/greenturret.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 8 )

[node name="Introscene" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -723.008, 152.908 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -131067, 1073741844, 0, -131066, 1073741844, 0, -131065, 1073741844, 0, -131064, 1073741844, 0, -131063, 1073741844, 0, -131062, 1073741844, 0, -131061, 1073741844, 0, -131060, 1073741844, 0, -131059, 1073741844, 0, -131058, 1073741844, 0, -131057, 1073741844, 0, -131056, 1073741844, 0, -131055, 1073741844, 0, -131054, 1073741844, 0, -65531, 1073741844, 0, -65530, 1073741844, 0, -65529, 1073741844, 0, -65528, 1073741844, 0, -65527, 1073741844, 0, -65526, 1073741844, 0, -65525, 1073741844, 0, -65524, 1073741844, 0, -65523, 1073741844, 0, -65522, 1073741844, 0, -65521, 1073741844, 0, -65520, 1073741844, 0, -65519, 1073741844, 0, -65518, 1073741844, 0, 5, 1073741844, 0, 6, 1073741844, 0, 7, 1073741844, 0, 8, 1073741844, 0, 9, 1073741844, 0, 10, 1073741844, 0, 11, 1073741844, 0, 12, 1073741844, 0, 13, 1073741844, 0, 14, 1073741844, 0, 15, 1073741844, 0, 16, 1073741844, 0, 17, 1073741844, 0, 18, 1073741844, 0, 65541, 1073741844, 0, 65542, 1073741844, 0, 65543, 1073741844, 0, 65544, 1073741844, 0, 65545, 1073741844, 0, 65546, 1073741844, 0, 65547, 1073741844, 0, 65548, 1073741844, 0, 65549, 0, 0, 65550, 1073741844, 0, 65551, 1073741844, 0, 65552, 1073741844, 0, 65553, 1073741844, 0, 65554, 1073741844, 0, 131077, 1073741844, 0, 131078, 1073741844, 0, 131079, 1073741844, 0, 131080, 1073741844, 0, 131081, 1073741844, 0, 131082, 1073741844, 0, 131083, 1073741844, 0, 131084, 1073741844, 0, 131085, 1073741844, 0, 131086, 1073741844, 0, 131087, 1073741844, 0, 131088, 1073741844, 0, 131089, 1073741844, 0, 131090, 1073741844, 0, 196613, 1073741844, 0, 196614, 1073741844, 0, 196615, 1073741844, 0, 196616, 1073741844, 0, 196617, 1073741844, 0, 196618, 1073741844, 0, 196619, 1073741844, 0, 196620, 1073741844, 0, 196621, 1073741844, 0, 196622, 1073741844, 0, 196623, 1073741844, 0, 196624, 1073741844, 0, 196625, 1073741844, 0, 196626, 1073741844, 0, 262149, 1073741844, 0, 262150, 1073741844, 0, 262151, 1073741844, 0, 262152, 1073741844, 0, 262153, 1073741844, 0, 262154, 1073741844, 0, 262155, 1073741844, 0, 262156, 1073741844, 0, 262157, 1073741844, 0, 262158, 1073741844, 0, 262159, 1073741844, 0, 262160, 1073741844, 0, 262161, 1073741844, 0, 262162, 1073741844, 0, 327685, 1073741844, 0, 327686, 1073741844, 0, 327687, 1073741844, 0, 327688, 1073741844, 0, 327689, 1073741844, 0, 327690, 1073741844, 0, 327691, 1073741844, 0, 327692, 1073741844, 0, 327693, 1073741844, 0, 327694, 1073741844, 0, 327695, 1073741844, 0, 327696, 1073741844, 0, 327697, 1073741844, 0, 327698, 1073741844, 0, 393221, 1073741844, 0, 393222, 1073741844, 0, 393223, 1073741844, 0, 393224, 1073741844, 0, 393225, 1073741844, 0, 393226, 1073741844, 0, 393227, 1073741844, 0, 393228, 1073741844, 0, 393229, 1073741844, 0, 393230, 1073741844, 0, 393231, 1073741844, 0, 393232, 1073741844, 0, 393233, 1073741844, 0, 393234, 1073741844, 0, 458757, 1073741844, 0, 458758, 1073741844, 0, 458759, 1073741844, 0, 458760, 1073741844, 0, 458761, 1073741844, 0, 458762, 1073741844, 0, 458763, 1073741844, 0, 458764, 1073741844, 0, 458765, 1073741844, 0, 458766, 1073741844, 0, 458767, 1073741844, 0, 458768, 1073741844, 0, 458769, 1073741844, 0, 458770, 1073741844, 0, 524293, 1073741844, 0, 524294, 1073741844, 0, 524295, 1073741844, 0, 524296, 1073741844, 0, 524297, 1073741844, 0, 524298, 1073741844, 0, 524299, 1073741844, 0, 524300, 1073741844, 0, 524301, 1073741844, 0, 524302, 1073741844, 0, 524303, 1073741844, 0, 524304, 1073741844, 0, 524305, 1073741844, 0, 524306, 1073741844, 0 )

[node name="TileMap2" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 0, 1073741824, 0, 1, 1073741824, 0, 2, 1073741824, 0, 3, 1073741824, 0, 4, 1073741824, 0, 5, 1073741824, 0, 6, 1073741824, 0, 7, 1073741824, 0, 8, 1073741824, 0, 9, 1073741824, 0, 10, 1073741824, 0, 11, 1073741824, 0, 12, 1073741824, 0, 13, 1073741824, 0, 14, 1073741824, 0, 15, 1073741824, 0, 16, 1073741824, 0, 65536, 1073741824, 0, 65537, 1073741824, 0, 65538, 1073741824, 0, 65539, 1073741824, 0, 65540, 1073741824, 0, 65541, 1073741824, 0, 65542, 1073741824, 0, 65543, 1073741824, 0, 65544, 1073741824, 0, 65545, 1073741824, 0, 65546, 1073741824, 0, 65547, 1073741824, 0, 65548, 1073741824, 0, 65549, 1073741824, 0, 65550, 1073741824, 0, 65551, 1073741824, 0, 65552, 1073741824, 0, 131072, 1073741824, 0, 131073, 1073741824, 0, 131074, 1073741824, 0, 131075, 1073741824, 0, 131076, 1073741824, 0, 131077, 1073741824, 0, 131078, 1073741824, 0, 131079, 1073741824, 0, 131080, 1073741824, 0, 131081, 1073741824, 0, 131082, 1073741824, 0, 131083, 1073741824, 0, 131084, 1073741824, 0, 131085, 1073741824, 0, 131086, 1073741824, 0, 131087, 1073741824, 0, 131088, 1073741824, 0, 196608, 1073741824, 0, 196609, 1073741824, 0, 196610, 1073741824, 0, 196611, 1073741824, 0, 196612, 1073741824, 0, 196613, 1073741824, 0, 196614, 1073741824, 0, 196615, 1073741824, 0, 196616, 1073741824, 0, 196617, 1073741824, 0, 196618, 1073741824, 0, 196619, 1073741824, 0, 196620, 1073741824, 0, 196621, 1073741824, 0, 196622, 1073741824, 0, 196623, 1073741824, 0, 196624, 1073741824, 0, 262144, 1073741824, 0, 262145, 1073741824, 0, 262146, 1073741824, 0, 262147, 1073741824, 0, 262148, 1073741824, 0, 262149, 1073741824, 0, 262150, 1073741824, 0, 262151, 1073741824, 0, 262152, 1073741824, 0, 262153, 1073741824, 0, 262154, 1073741824, 0, 262155, 1073741824, 0, 262156, 1073741824, 0, 262157, 1073741824, 0, 262158, 1073741824, 0, 262159, 1073741824, 0, 262160, 1073741824, 0, 327680, 1073741824, 0, 327681, 1073741824, 0, 327682, 1073741824, 0, 327683, 1073741824, 0, 327684, 1073741824, 0, 327685, 1073741824, 0, 327686, 1073741824, 0, 327687, 1073741824, 0, 327688, 1073741824, 0, 327689, 1073741824, 0, 327690, 1073741824, 0, 327691, 1073741824, 0, 327692, 1073741824, 0, 327693, 1073741824, 0, 327694, 1073741824, 0, 327695, 1073741824, 0, 327696, 1073741824, 0, 393216, 1073741824, 0, 393217, 1073741824, 0, 393218, 1073741824, 0, 393219, 1073741824, 0, 393220, 1073741824, 0, 393221, 1073741824, 0, 393222, 1073741824, 0, 393223, 1073741824, 0, 393224, 1073741824, 0, 393225, 1073741824, 0, 393226, 1073741824, 0, 393227, 1073741824, 0, 393228, 1073741824, 0, 393229, 1073741824, 0, 393230, 1073741824, 0, 393231, 1073741824, 0, 393232, 1073741824, 0, 458752, 1073741824, 0, 458753, 1073741824, 0, 458754, 1073741824, 0, 458755, 1073741824, 0, 458756, 1073741824, 0, 458757, 1073741824, 0, 458758, 1073741824, 0, 458759, 1073741824, 0, 458760, 1073741824, 0, 458761, 1073741824, 0, 458762, 1073741824, 0, 458763, 1073741824, 0, 458764, 1073741824, 0, 458765, 1073741824, 0, 458766, 1073741824, 0, 458767, 1073741824, 0, 458768, 1073741824, 0, 524288, 1073741824, 0, 524289, 1073741824, 0, 524290, 1073741824, 0, 524291, 1073741824, 0, 524292, 1073741824, 0, 524293, 1073741824, 0, 524294, 1073741824, 0, 524295, 1073741824, 0, 524296, 1073741824, 0, 524297, 1073741824, 0, 524298, 1073741824, 0, 524299, 1073741824, 0, 524300, 1073741824, 0, 524301, 1073741824, 0, 524302, 1073741824, 0, 524303, 1073741824, 0, 524304, 1073741824, 0, 589824, 1073741824, 0, 589825, 1073741824, 0, 589826, 1073741824, 0, 589827, 1073741824, 0, 589828, 1073741824, 0, 589829, 1073741824, 0, 589830, 1073741824, 0, 589831, 1073741824, 0, 589832, 1073741824, 0, 589833, 1073741824, 0, 589834, 1073741824, 0, 589835, 1073741824, 0, 589836, 1073741824, 0, 589837, 1073741824, 0, 589838, 1073741824, 0, 589839, 1073741824, 0, 589840, 1073741824, 0, 655360, 1073741824, 0, 655361, 1073741824, 0, 655362, 1073741824, 0, 655363, 1073741824, 0, 655364, 1073741824, 0, 655365, 1073741824, 0, 655366, 1073741824, 0, 655367, 1073741824, 0, 655368, 1073741824, 0, 655369, 1073741824, 0, 655370, 1073741824, 0, 655371, 1073741824, 0, 655372, 1073741824, 0, 655373, 1073741824, 0, 655374, 1073741824, 0, 655375, 1073741824, 0, 655376, 1073741824, 0 )

[node name="EnemyTank" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 360, 96 )
script = null

[node name="Label" type="Label" parent="EnemyTank"]
margin_left = -346.52
margin_top = 154.337
margin_right = 300.48
margin_bottom = 482.337
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0235294, 0.121569, 0.768627, 1 )
text = "Czołg -"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="EnemyTank/Label"]
margin_left = 168.0
margin_top = 7.99992
margin_right = 999.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.768627, 0.0235294, 0.0235294, 1 )
text = "Zwykły czołg. Jego pociski lecą w linii prostej
Prędkość obrotu wieży:
Wykrywanie:
Czas ładowania:
Zwrotność:
Prędkość:
Limit hp : 45/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyBullet" parent="EnemyTank" instance=ExtResource( 5 )]
position = Vector2( -151.194, -3.7755 )
speed = 0

[node name="Timer" type="Timer" parent="EnemyTank"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="missletank" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 480, 96 )
script = null

[node name="Label3" type="Label" parent="missletank"]
margin_left = -414.607
margin_top = 73.1636
margin_right = 232.393
margin_bottom = 401.164
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.0235294, 0.121569, 0.768627, 1 )
text = "Rakietnica - "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="missletank/Label3"]
margin_left = 137.0
margin_top = 4.99992
margin_right = 983.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.768627, 0.0235294, 0.0235294, 1 )
text = "           Silniejszy czołg.Strzela rakietami
		podążającymi za celem przez pewien czas
		potem wybuchają
Prędkość obrotu wieży:
Wykrywanie:
Czas ładowania:
Zwrotność:
Prędkość:
Limit hp : 45/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="missle" parent="missletank" instance=ExtResource( 6 )]
position = Vector2( -72, 0 )
rotation = -3.14159

[node name="timer2" type="Timer" parent="missletank"]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 45.4802
margin_top = 169.26
margin_right = 1073.48
margin_bottom = 769.26
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.152941, 0.0196078, 0.780392, 1 )
text = "Sterowanie -      W
                       A   S   D
Mysz: celowanie + strzał"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dzialka" type="Timer" parent="."]
wait_time = 12.0
one_shot = true
autostart = true

[node name="Blueturret" parent="." instance=ExtResource( 1 )]
visible = false
script = null

[node name="Działko" parent="Blueturret" instance=ExtResource( 11 )]
position = Vector2( 225.586, -1.88776 )
script = null

[node name="redturret" parent="Blueturret/Działko" instance=ExtResource( 10 )]
position = Vector2( 221.81, 1.88774 )
script = null

[node name="Label2" type="Label" parent="Blueturret/Działko/redturret"]
margin_left = -707.559
margin_top = 51.765
margin_right = 520.441
margin_bottom = 651.765
rect_scale = Vector2( 0.8, 0.9 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.152941, 0.0196078, 0.780392, 1 )
text = "Działka są nieprzemieszczającymi
się przeciwnikami, co nie znaczy, że
nie są groźne. Niektóre z nich strzelają
pociskami naprowadzającymi"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2s" type="Label" parent="Blueturret/Działko/redturret/Label2"]
margin_left = 420.116
margin_top = 372.629
margin_right = 1067.12
margin_bottom = 700.629
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0.847059, 0.0901961, 0.729412, 1 )
text = "g - Powrót do menu"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="EnemyTank/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="missletank/timer2" to="." method="_on_timer2_timeout"]
[connection signal="timeout" from="dzialka" to="." method="_on_dzialka_timeout"]
